# FRCDesign-Zensical

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-zensical.bat  setup.bat  wrangler.toml  zensical.toml
docs/: index.md
docs/javascripts/: slides.js  yt-embed.js
docs/learning-course/: index.md
docs/learning-course/course-setup/new-to-cad/: index.md
docs/learning-course/course-setup/new-to-onshape/: account-setup.md
docs/learning-course/course-setup/required-course-tools/: featurescripts.md
docs/resources/: featurescripts.md  frcdesignlib.md
docs/stylesheets/: extra.css  slides.css  yt-embed.css
docs/website-feature-guide/: index.md
site/: 404.html  index.html  search.json  sitemap.xml
site/learning-course/: index.html
site/learning-course/course-setup/new-to-cad/: index.html
site/learning-course/course-setup/new-to-onshape/account-setup/: index.html
site/learning-course/course-setup/new-to-onshape/documents-page/: index.html
site/learning-course/course-setup/new-to-onshape/performance-tuning/: index.html
site/learning-course/course-setup/old-stage0-pages/cad-software/: index.html
site/learning-course/course-setup/old-stage0-pages/document-navigation/: index.html
site/learning-course/stage1/introduction/: index.html
site/learning-course/stage2/foam-ball-conveyer/: index.html
site/learning-course/stage2/fourbar-linkage/: index.html
site/learning-course/stage2/pasta-roller-intake/: index.html
site/learning-course/stage4/: index.html
site/markdown/: index.html
site/website-feature-guide/: index.html
(+123 files in other folders)
